[package]
authors = ["a.power@1aim.com"]
description = "Easily deserialize postgres rows"
license = "MIT/Apache-2.0"
name = "serde_postgres"
homepage = "https://github.com/1aim/serde_postgres"
repository = "https://github.com/1aim/serde_postgres.git"
version = "0.2.0"
edition = "2018"

[badges]
[badges.travis-ci]
repository = "1aim/serde_postgres"

[dependencies]
serde = "1.0.123"
tokio-postgres = { version = "0.7.0", default_features = false }

[dev-dependencies]
serde = { version = "1.0.123", features = [ "derive" ] }
tokio = { version = "1.2.0", features = [ "macros" ] }
tokio-postgres = "0.7.0"
postgres = "0.19.0"
